// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When not authenticated BecomeSupplier Form renders a snapshot properly 1`] = `
<DocumentFragment>
  <div
    class="Register"
  >
    <hr />
    <br />
    <form
      class=""
    >
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-user"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formfirst_name"
              name="first_name"
              placeholder="Όνομα"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-user-plus"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formlast_name"
              name="last_name"
              placeholder="Επίθετο"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-user-secret"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formUsername"
              name="username"
              placeholder="Όνομα χρήστη"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-envelope"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formEmail"
              name="email"
              placeholder="your@email.com"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-key"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formPassword"
              name="password"
              placeholder="Κωδικός"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-home"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formAddress"
              name="street_name"
              placeholder="Οδός"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-map-marker-alt"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formAddressNumber"
              name="street_number"
              placeholder="Αριθμός"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-building"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formCity"
              name="city"
              placeholder="Πόλη"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-archive"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formZip"
              name="zip_code"
              placeholder="Τ.Κ."
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <input
            class="input form-control"
            id="formCompany"
            name="company_name"
            placeholder="Όνομα εταιρείας"
            type="text"
            value=""
          />
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <select
            class="input form-control"
            id="Formcompany_type"
            name="company_type"
            placeholder="Είδος προιόντων"
          >
            <option
              value=""
            >
              Είδος προιόντων
            </option>
            <option
              value="meat_and_poultry"
            >
              Κρεατικά
            </option>
            <option
              value="coffee_and_drinks"
            >
              Καφές και ποτά
            </option>
            <option
              value="other"
            >
              Άλλο
            </option>
          </select>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <button
        class="button btn-square btn btn-danger"
        type="submit"
        value="Submit"
      >
        Εγγραφή
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`When not authenticated GetStarted Form renders a snapshot properly 1`] = `
<DocumentFragment>
  <div
    class="Register"
  >
    <hr />
    <br />
    <form
      class=""
    >
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-user"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formfirst_name"
              name="first_name"
              placeholder="Όνομα"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-user-plus"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formlast_name"
              name="last_name"
              placeholder="Επίθετο"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-user-secret"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formUsername"
              name="username"
              placeholder="Όνομα χρήστη"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-envelope"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formEmail"
              name="email"
              placeholder="your@email.com"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-key"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formPassword"
              name="password"
              placeholder="Κωδικός"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-home"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formAddress"
              name="street_name"
              placeholder="Οδός"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-map-marker-alt"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formAddressNumber"
              name="street_number"
              placeholder="Αριθμός"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-building"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formCity"
              name="city"
              placeholder="Πόλη"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-archive"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formZip"
              name="zip_code"
              placeholder="Τ.Κ."
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-warehouse"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formStore"
              name="store_name"
              placeholder="Όνομα καταστήματος"
              type="text"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <select
            class="input form-control"
            id="formstore_type"
            name="store_type"
            placeholder="Είδος προιόντων"
          >
            <option
              value=""
            >
              Είδος καταστήματος
            </option>
            <option
              value="other"
            >
              Άλλο
            </option>
            <option
              value="coffee_and_drinks"
            >
              Cafe - Bar
            </option>
            <option
              value="restaurant"
            >
              Εστιατόριο
            </option>
            <option
              value="quick_service_restaurant"
            >
              Fast-food
            </option>
          </select>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <button
        class="button btn-square btn btn-danger"
        type="submit"
        value="Submit"
      >
        Εγγραφή
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`When not authenticated Login Form renders a snapshot properly 1`] = `
<DocumentFragment>
  <div
    class="Login"
  >
    <h1
      class="title is-1"
      title="Login"
    >
      Σύνδεση
    </h1>
    <hr />
    <form
      class=""
    >
      <div
        class="form-row"
      >
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-envelope"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formEmail"
              name="email"
              placeholder="your@email.com"
              type="email"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
        <div
          class="form-group col"
          role="formGroup"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <span
                class="input-group-text"
              >
                <i
                  class="fas fa-lock"
                />
              </span>
            </div>
            <input
              class="input form-control"
              id="formPassword"
              name="password"
              placeholder="Κωδικός"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-message invalid"
          />
        </div>
      </div>
      <button
        class="button btn-square btn btn-success"
        type="submit"
        value="Submit"
      >
        Σύνδεση
      </button>
    </form>
  </div>
</DocumentFragment>
`;
